# turpial-firmware

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING-EN.md  CONTRIBUTING.md  CONTRIBUTING_ES.md  Kconfig  LICENSE  Makefile  README.md  genindex.html  index.html  ipv6_autogen.c  ipv6_autogen.h  main.c  objects.inv  platformio.ini  sdkconfig  sdkconfig.defaults  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/: FUNDING.yml
_sources/: index.rst.txt
api/: classTask.html  class_view_hierarchy.html  classesc_1_1Battery.html  classesc_1_1FuelGauge.html  classesc_1_1Interrupt.html  classnetwork_1_1WiFi.html  classnetwork_1_1WiFiDefaultEventHandler.html  classnetwork_1_1WiFiEventHandler.html  classstorage_1_1NVS.html  classutil_1_1Semaphore.html  define_ErrUtil_8h_1a39bb0857aa2024d2f1cad280509a3f12.html  define_Hex_8h_1ada3a37dafa3fd7e6adf661046e5d3b32.html  define_Radio_8h_1a4b7b32c0f0cac537869bda146bb81741.html  define_Radio_8h_1a5b4fb25cb07e70b336b4fcc375e4f557.html  define_Radio_8h_1aaac1ff4eb8c014b222d7477862251c42.html  define_Radio_8h_1ac90ebbd3a92eccb23bc28e69486a6f8a.html  define_defaults_8h_1a0867768550c3ec3503ba065fd93a7cda.html  define_defaults_8h_1a16aa66cd541ba904fc43f7e2f3ec45aa.html  define_defaults_8h_1a22f3f63066e2b85aa529b6f5f212150c.html  define_defaults_8h_1a25a55e0e82db2b7ff645f49b253822a1.html  define_defaults_8h_1a27efa2b7cf8e42ecce3ffc25e20de1b8.html  define_defaults_8h_1a33bc61022da60ac1c9ee84ac0ed192e6.html  define_defaults_8h_1a33c0e57118e015c006f6525d8a7e4dc7.html  (+213 more)
components/HTTP/: CMakeLists.txt
components/HTTP/certs/: cacert.pem  prvtkey.pem
components/HTTP/src/: CheckConnections.cpp  CheckConnections.h  HttpRequest.h  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpServerHandler.cpp  HttpServerHandler.h  Message.cpp  Message.h  RESTServer.cpp  RESTServer.h  Socket.cpp  Socket.h  Websocket.cpp  Websocket.h  WsHandlerEvents.h
components/HTTP/test/: CMakeLists.txt  testHttpServer.cpp
core/: Makefile  Makefile.dep  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  defaults.h  main.cpp
(+885 files in other folders)
